--- a/css_files/navbar.css
+++ b/css_files/navbar.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     background: var(--pure-white-color);
     box-shadow: 0px 0px .5rem var(--text-color-light);
+    z-index: 5;
 }
 
 .navbar-ayumall-logo{
@@ -62,6 +63,10 @@
     text-align: center;
 }
 
+.nav-icon-link i{
+    font-size: 1.2rem;
+}
+
 .nav-icon-name{
     display: block;
     font-size: .75rem;
@@ -93,6 +98,7 @@
     background: var(--pure-white-color);
     box-shadow: 0px 0px .5rem var(--text-color-light);
     display: none;
+    z-index: 6;
 }
 
 .mobile-nav-display{
