refactor Add links
Added links to all non links
Minor css changes

--- a/css_files/cartMgmtPage.css
+++ b/css_files/cartMgmtPage.css
@@ -124,6 +124,12 @@
     color: var(--text-color-white);
     font-weight: bold;
     border: none;
+    border-radius: .25rem;
+}
+
+.place-order-btn:hover{
+    background: var(--cta-color-hover);
+    cursor: pointer;
 }
 
 .price-details-container div{
